// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should render local and remote cluster details from _clusters 1`] = `
<Fragment>
  <EuiSpacer
    size="m"
  />
  <ClustersHealth
    clusters={
      Object {
        "(local)": Object {
          "_shards": Object {
            "failed": 0,
            "skipped": 0,
            "successful": 2,
            "total": 2,
          },
          "indices": "kibana_sample_data_logs,kibana_sample_data_flights",
          "status": "successful",
          "timed_out": false,
          "took": 0,
        },
        "remote1": Object {
          "_shards": Object {
            "failed": 0,
            "skipped": 0,
            "successful": 2,
            "total": 2,
          },
          "indices": "kibana_sample_data_logs,kibana_sample_data_flights",
          "status": "successful",
          "timed_out": false,
          "took": 1,
        },
      }
    }
  />
  <ClustersTable
    clusters={
      Object {
        "(local)": Object {
          "_shards": Object {
            "failed": 0,
            "skipped": 0,
            "successful": 2,
            "total": 2,
          },
          "indices": "kibana_sample_data_logs,kibana_sample_data_flights",
          "status": "successful",
          "timed_out": false,
          "took": 0,
        },
        "remote1": Object {
          "_shards": Object {
            "failed": 0,
            "skipped": 0,
            "successful": 2,
            "total": 2,
          },
          "indices": "kibana_sample_data_logs,kibana_sample_data_flights",
          "status": "successful",
          "timed_out": false,
          "took": 1,
        },
      }
    }
  />
</Fragment>
`;

exports[`render should render local cluster details from _shards 1`] = `
<Fragment>
  <EuiSpacer
    size="m"
  />
  <ClustersTable
    clusters={
      Object {
        "(local)": Object {
          "_shards": Object {
            "failed": 0,
            "skipped": 0,
            "successful": 2,
            "total": 2,
          },
          "failures": undefined,
          "indices": "",
          "status": "successful",
          "timed_out": undefined,
          "took": undefined,
        },
      }
    }
  />
</Fragment>
`;
